2001-02-16  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* remote.c (build_remote_gdbarch_data): Use new TARGET_ADDR_BIT 
	instead of TARGET_PTR_BIT (to support Harvard architectures).

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	From 2001-02-11 Paul Hilfinger <hilfingr@lisbon.int.act-europe.fr>
	* hpux-thread.c (hpux_thread_xfer_memory): Add mem_attrib 
	argument to parameter list and to call in order to conform to 
	to_xfer_memory field of struct target_ops.

2001-02-12  Michael Chastain  <chastain@redhat.com>

	* somsolib.c (som_solib_add_solib_objfile): Do not use
	section relocation feature of syms_from_objfile.  Do my own
	section relocation, offsetting each section of the som by
	either text_addr - text_link_addr or data_start.

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	* TODO (5.1): Move ``Hardware watchpint problems'' out of 5.1.

2001-02-16  Andrew Cagney  <ac131313@redhat.com>

	* MAINTAINERS (paper trail): Update.

2001-02-16  Mark Kettenis  <kettenis@gnu.org>

	* target.h (target_fetch_registers): Fix comment.

2001-02-15  Andrew Cagney  <ac131313@redhat.com>

	* f-exp.y: Include <ctype.h>.
	(parse_number): Ensure that ``i'' is always initialized.

>>>>>>> 1.966
2001-02-14  Jim Kingdon  <jkingdon@engr.sgi.com>

	* MAINTAINERS: Add myself to paper trail section.

2001-02-14  Michael Sokolov  <msokolov@ivan.Harhan.ORG>

	* configure.in (AC_CHECK_HEADERS): Add sys/file.h.
	* configure, config.in: Regenerate.
	* corelow.c: Include <sys/file.h> if present.

2001-02-14  Andrew Cagney  <ac131313@redhat.com>

	* inflow.c (terminal_ours_1): Initialize ``osigtou''.  Only
 	declare when have SIGTTOU.

2001-02-14  Eli Zaretskii  <eliz@is.elta.co.il>

	* config/djgpp/fnchange.lst: Add entries for gdb/gdbtk/*/ChangeLog-*.

2001-02-12  Jim Kingdon  <jkingdon@engr.sgi.com>

	* MAINTAINERS: Update my email address.

2001-02-11  Eli Zaretskii  <eliz@is.elta.co.il>

	* NEWS: Document that "info symbol" works with COFF debug info and
	its variants.
